# Assignment_3

./: .gitignore  README.md  main.py  model.py  pre_process.py  pyproject.toml  utils.py
