[project]
name = "assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "matplotlib>=3.10.0",
]
[tool.setuptools]
py-modules = ["main", "model", "pre_processor", "utils"]